--- a/list-geo.html
+++ b/list-geo.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Site</title>
+    <title>Select Location</title>
     <link rel="stylesheet" href="style.css">
+    <script src="list-geo.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Weather Information</h1>
+        <h1>Select Location</h1>
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -16,8 +17,12 @@
         <a href="list-geo.html">Select Location</a>
     </nav>
     <div class="container">
-        <h1>Welcome to the Weather Information Site</h1>
-        <p>Use the menu above to navigate through the site.</p>
+        <select id="location-select">
+            <option value="">Select a location</option>
+        </select>
+        <div id="weather-info" class="weather-info">
+            <p>Select a location to see the weather information.</p>
+        </div>
     </div>
 </body>
 </html>
