--- a/list-geo.html
+++ b/list-geo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Location</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="list-geo.js" defer></script>
+    <link rel="stylesheet" href="style/main-style.css">
+    <script src="scripts/list-geo.js" defer></script>
 </head>
 <body>
     <header>
@@ -20,7 +20,8 @@
         <select id="location-select">
             <option value="">Select a location</option>
         </select>
-        <div id="weather-info" class="weather-info">
+        <button id="add-location">Add Location</button>
+        <div id="weather-blocks" class="weather-blocks">
             <p>Select a location to see the weather information.</p>
         </div>
     </div>
