reorganize files, create intro page

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Site</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+    <title>Sample Page</title>
+    <link rel = "stylesheet" href = "style/index-page/style-main.css">
+    <link id = "dayStylesheet" rel = "stylesheet" href = "style/index-page/style-light.css" disabled>
+    <link id = "eveningStylesheet" rel = "stylesheet" href = "style/index-page/style-dark.css" disabled>
 </head>
 <body>
-    <header>
-        <h1>Weather Information</h1>
-    </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="current-geo.html">Current Location Weather</a>
-        <a href="list-geo.html">Select Location</a>
-    </nav>
-    <div class="container">
-        <h1>Welcome to the Weather Information Site</h1>
-        <p>Use the menu above to navigate through the site.</p>
+    <img src = "images/sun.png" class = "day-time-image">
+    <a href="current-geo.html">
+    <div class = "lower-connector">
+        <H1>Choose your City</H1>
+        <p>Get in - depth weather information</p>
+        <img src = "images/location-point.png">
     </div>
+    </a>
+    <script type="module" src="scripts/index-page/index-main.js"></script>
 </body>
 </html>
