--- a/list-geo.html
+++ b/list-geo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Select Location</title>
     <link rel="stylesheet" href="style/main-style.css">
-    <script src="scripts/list-geo.js" defer></script>
+    <script src="scripts/test/list-geo.js" defer></script>
 </head>
 <body>
     <header>
