--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <title>Sample Page</title>
+    <title>WeatherUp</title>
     <link rel = "stylesheet" href = "style/index-page/style-main.css">
     <link id = "dayStylesheet" rel = "stylesheet" href = "style/index-page/style-light.css" disabled>
     <link id = "eveningStylesheet" rel = "stylesheet" href = "style/index-page/style-dark.css" disabled>
 </head>
 <body>
     <img src = "images/sun.png" class = "day-time-image">
-    <a href="current-geo.html">
+    <a href="home.html">
     <div class = "lower-connector">
         <H1>Choose your City</H1>
         <p>Get in - depth weather information</p>
         <img src = "images/location-point.png">
     </div>
     </a>
-    <script type="module" src="scripts/index-page/index-main.js"></script>
+    <script type="module" src="scripts/index-page/stylesheet-selector.js"></script>
 </body>
 </html>
