split home page content on files

--- a/home.html
+++ b/home.html
@@ -4,54 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Site</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #e0f7fa;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .weather-container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 600px;
-            width: 100%;
-        }
-        .weather-container h1 {
-            margin: 0;
-            font-size: 24px;
-        }
-        .weather-container p {
-            margin: 5px 0;
-        }
-        .weather-icon {
-            width: 100px;
-            height: 100px;
-        }
-        .temp {
-            font-size: 48px;
-            font-weight: bold;
-        }
-        .forecast {
-            margin-top: 20px;
-        }
-        .forecast-day, .forecast-hour {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .forecast-day img, .forecast-hour img {
-            width: 40px;
-            height: 40px;
-        }
-    </style>
+    <link rel = "stylesheet" href="style/home-page/style-main.css">
 </head>
 <body>
     <div class="weather-container">
@@ -78,193 +31,6 @@
         </div>
     </div>
 
-    <script>
-        const apiKey = 'e4c7d413beed7d8cc6521ae67ca4d8f0';
-
-        function getLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(position => {
-                    const lat = position.coords.latitude;
-                    const lon = position.coords.longitude;
-                    getWeatherByCoords(lat, lon);
-                }, () => {
-                    alert('Unable to retrieve your location. Please enter a city name.');
-                });
-            } else {
-                alert('Geolocation is not supported by this browser. Please enter a city name.');
-            }
-        }
-
-        async function getWeatherByCoords(lat, lon) {
-            const weatherUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric`;
-            const forecastUrl = `https://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric`;
-
-            try {
-                const weatherResponse = await fetch(weatherUrl);
-                if (!weatherResponse.ok) {
-                    throw new Error('Unable to retrieve weather data');
-                }
-                const weatherData = await weatherResponse.json();
-
-                document.getElementById('weatherResult').style.display = 'block';
-                document.getElementById('weatherIcon').src = `http://openweathermap.org/img/w/${weatherData.weather[0].icon}.png`;
-                document.getElementById('temperature').innerText = `${weatherData.main.temp}°C`;
-                document.getElementById('weatherDescription').innerText = weatherData.weather[0].description;
-                document.getElementById('humidity').innerText = `Humidity: ${weatherData.main.humidity}%`;
-                document.getElementById('windSpeed').innerText = `Wind Speed: ${weatherData.wind.speed} m/s`;
-                document.getElementById('pressure').innerText = `Pressure: ${weatherData.main.pressure} hPa`;
-                document.getElementById('visibility').innerText = `Visibility: ${weatherData.visibility / 1000} km`;
-                document.getElementById('feelsLike').innerText = `Feels Like: ${weatherData.main.feels_like}°C`;
-
-                const forecastResponse = await fetch(forecastUrl);
-                const forecastData = await forecastResponse.json();
-
-                document.getElementById('forecast').style.display = 'block';
-                const forecastContainer = document.getElementById('forecastContainer');
-                forecastContainer.innerHTML = '';
-                for (let i = 0; i < forecastData.list.length; i += 8) {
-                    const forecastItem = forecastData.list[i];
-                    const date = new Date(forecastItem.dt_txt).toDateString();
-                    const icon = forecastItem.weather[0].icon;
-                    const temp = forecastItem.main.temp;
-
-                    forecastContainer.innerHTML += `
-                        <div class="forecast-day">
-                            <span>${date}</span>
-                            <img src="http://openweathermap.org/img/w/${icon}.png" alt="Weather Icon">
-                            <span>${temp}°C</span>
-                            <span>Feels Like: ${forecastItem.main.feels_like}°C</span>
-                            <span>Humidity: ${forecastItem.main.humidity}%</span>
-                            <span>Wind: ${forecastItem.wind.speed} m/s</span>
-                            <span>Pressure: ${forecastItem.main.pressure} hPa</span>
-                            <span>Visibility: ${forecastItem.visibility / 1000} km</span>
-                        </div>
-                    `;
-                }
-
-                const nextDay = new Date();
-                nextDay.setDate(nextDay.getDate() + 1);
-                const nextDayString = nextDay.toISOString().split('T')[0];
-
-                const hourlyForecast = forecastData.list.filter(item => item.dt_txt.startsWith(nextDayString));
-
-                if (hourlyForecast.length > 0) {
-                    document.getElementById('hourlyForecast').style.display = 'block';
-                    const hourlyForecastContainer = document.getElementById('hourlyForecastContainer');
-                    hourlyForecastContainer.innerHTML = '';
-                    hourlyForecast.forEach(forecastItem => {
-                        const time = new Date(forecastItem.dt_txt).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                        const icon = forecastItem.weather[0].icon;
-                        const temp = forecastItem.main.temp;
-
-                        hourlyForecastContainer.innerHTML += `
-                            <div class="forecast-hour">
-                                <span>${time}</span>
-                                <img src="http://openweathermap.org/img/w/${icon}.png" alt="Weather Icon">
-                                <span>${temp}°C</span>
-                                <span>Feels Like: ${forecastItem.main.feels_like}°C</span>
-                                <span>Humidity: ${forecastItem.main.humidity}%</span>
-                                <span>Wind: ${forecastItem.wind.speed} m/s</span>
-                                <span>Pressure: ${forecastItem.main.pressure} hPa</span>
-                                <span>Visibility: ${forecastItem.visibility / 1000} km</span>
-                            </div>
-                        `;
-                    });
-                }
-
-            } catch (error) {
-                alert(error.message);
-            }
-        }
-
-        async function getWeather() {
-            const city = document.getElementById('cityInput').value;
-            if (!city) {
-                alert('Please enter a city name');
-                return;
-            }
-            const weatherUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
-            const forecastUrl = `https://api.openweathermap.org/data/2.5/forecast?q=${city}&appid=${apiKey}&units=metric`;
-
-            try {
-                const weatherResponse = await fetch(weatherUrl);
-                if (!weatherResponse.ok) {
-                    throw new Error('City not found');
-                }
-                const weatherData = await weatherResponse.json();
-
-                document.getElementById('weatherResult').style.display = 'block';
-                document.getElementById('weatherIcon').src = `http://openweathermap.org/img/w/${weatherData.weather[0].icon}.png`;
-                document.getElementById('temperature').innerText = `${weatherData.main.temp}°C`;
-                document.getElementById('weatherDescription').innerText = weatherData.weather[0].description;
-                document.getElementById('humidity').innerText = `Humidity: ${weatherData.main.humidity}%`;
-                document.getElementById('windSpeed').innerText = `Wind Speed: ${weatherData.wind.speed} m/s`;
-                document.getElementById('pressure').innerText = `Pressure: ${weatherData.main.pressure} hPa`;
-                document.getElementById('visibility').innerText = `Visibility: ${weatherData.visibility / 1000} km`;
-                document.getElementById('feelsLike').innerText = `Feels Like: ${weatherData.main.feels_like}°C`;
-
-                const forecastResponse = await fetch(forecastUrl);
-                const forecastData = await forecastResponse.json();
-
-                document.getElementById('forecast').style.display = 'block';
-                const forecastContainer = document.getElementById('forecastContainer');
-                forecastContainer.innerHTML = '';
-                for (let i = 0; i < forecastData.list.length; i += 8) {
-                    const forecastItem = forecastData.list[i];
-                    const date = new Date(forecastItem.dt_txt).toDateString();
-                    const icon = forecastItem.weather[0].icon;
-                    const temp = forecastItem.main.temp;
-
-                    forecastContainer.innerHTML += `
-                        <div class="forecast-day">
-                            <span>${date}</span>
-                            <img src="http://openweathermap.org/img/w/${icon}.png" alt="Weather Icon">
-                            <span>${temp}°C</span>
-                            <span>Feels Like: ${forecastItem.main.feels_like}°C</span>
-                            <span>Humidity: ${forecastItem.main.humidity}%</span>
-                            <span>Wind: ${forecastItem.wind.speed} m/s</span>
-                            <span>Pressure: ${forecastItem.main.pressure} hPa</span>
-                            <span>Visibility: ${forecastItem.visibility / 1000} km</span>
-                        </div>
-                    `;
-                }
-
-                const nextDay = new Date();
-                nextDay.setDate(nextDay.getDate() + 1);
-                const nextDayString = nextDay.toISOString().split('T')[0];
-
-                const hourlyForecast = forecastData.list.filter(item => item.dt_txt.startsWith(nextDayString));
-
-                if (hourlyForecast.length > 0) {
-                    document.getElementById('hourlyForecast').style.display = 'block';
-                    const hourlyForecastContainer = document.getElementById('hourlyForecastContainer');
-                    hourlyForecastContainer.innerHTML = '';
-                    hourlyForecast.forEach(forecastItem => {
-                        const time = new Date(forecastItem.dt_txt).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                        const icon = forecastItem.weather[0].icon;
-                        const temp = forecastItem.main.temp;
-
-                        hourlyForecastContainer.innerHTML += `
-                            <div class="forecast-hour">
-                                <span>${time}</span>
-                                <img src="http://openweathermap.org/img/w/${icon}.png" alt="Weather Icon">
-                                <span>${temp}°C</span>
-                                <span>Feels Like: ${forecastItem.main.feels_like}°C</span>
-                                <span>Humidity: ${forecastItem.main.humidity}%</span>
-                                <span>Wind: ${forecastItem.wind.speed} m/s</span>
-                                <span>Pressure: ${forecastItem.main.pressure} hPa</span>
-                                <span>Visibility: ${forecastItem.visibility / 1000} km</span>
-                            </div>
-                        `;
-                    });
-                }
-
-            } catch (error) {
-                alert(error.message);
-            }
-        }
-
-        document.addEventListener('DOMContentLoaded', getLocation);
-    </script>
+    <script src = "scripts/home-page/main.js"></script>
 </body>
 </html>
