--- a/home.html
+++ b/home.html
@@ -11,6 +11,15 @@
         <h1>Weather in Your City</h1>
         <input type="text" id="cityInput" placeholder="Enter city name">
         <button onclick="getWeather()">Get Weather</button>
+        
+        <div>
+            <label for="unitSelect">Choose unit: </label>
+            <select id="unitSelect" onchange="getWeather()">
+                <option value="metric">Celsius</option>
+                <option value="imperial">Fahrenheit</option>
+            </select>
+        </div>
+
         <div id="weatherResult" style="display: none;">
             <img id="weatherIcon" class="weather-icon" src="" alt="Weather Icon">
             <p class="temp" id="temperature"></p>
