change display style

--- a/home.html
+++ b/home.html
@@ -32,11 +32,11 @@
         </div>
         <div class="forecast" id="hourlyForecast" style="display: none;">
             <h2>Day Forecast</h2>
-            <div id="hourlyForecastContainer"></div>
+            <div id="hourlyForecastContainer" class="horizontal-forecast"></div>
         </div>
         <div class="forecast" id="forecast" style="display: none;">
             <h2>5-Day Forecast</h2>
-            <div id="forecastContainer"></div>
+            <div id="forecastContainer" class="horizontal-forecast"></div>
         </div>
     </div>
 
