About and Contact Us pages added

--- a/about-us.html
+++ b/about-us.html
@@ -1,100 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background: #fff;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-        .student-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .student-card {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            background: #fafafa;
-        }
-        .student-card img {
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            margin-right: 20px;
-        }
-        .student-info {
-            text-align: left;
-        }
-        .student-info h2 {
-            margin: 0 0 10px 0;
-            font-size: 1.5em;
-            color: #333;
-        }
-        .student-info p {
-            margin: 5px 0;
-            color: #666;
-        }
-        .student-info a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-        .student-info a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style/about-us-page/style-main.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>About Us</h1>
-        <ul class="student-list">
-            <li class="student-card">
-                <img src="path_to_student1_photo.jpg" alt="Student One Photo">
-                <div class="student-info">
-                    <h2>Student One</h2>
-                    <p>Email: <a href="mailto:student1@example.com">student1@example.com</a></p>
-                    <p>LinkedIn: <a href="https://linkedin.com/in/student1" target="_blank">Student One LinkedIn</a></p>
-                    <p>Twitter: <a href="https://twitter.com/student1" target="_blank">@student1</a></p>
-                </div>
-            </li>
-            <li class="student-card">
-                <img src="path_to_student2_photo.jpg" alt="Student Two Photo">
-                <div class="student-info">
-                    <h2>Student Two</h2>
-                    <p>Email: <a href="mailto:student2@example.com">student2@example.com</a></p>
-                    <p>LinkedIn: <a href="https://linkedin.com/in/student2" target="_blank">Student Two LinkedIn</a></p>
-                    <p>Twitter: <a href="https://twitter.com/student2" target="_blank">@student2</a></p>
-                </div>
-            </li>
-            <li class="student-card">
-                <img src="path_to_student3_photo.jpg" alt="Student Three Photo">
-                <div class="student-info">
-                    <h2>Student Three</h2>
-                    <p>Email: <a href="mailto:student3@example.com">student3@example.com</a></p>
-                    <p>LinkedIn: <a href="https://linkedin.com/in/student3" target="_blank">Student Three LinkedIn</a></p>
-                    <p>Twitter: <a href="https://twitter.com/student3" target="_blank">@student3</a></p>
-                </div>
-            </li>
-            <!-- Add more student cards as needed -->
-        </ul>
+
+  <!-- Website Description Section -->
+  <section class="container mt-5">
+    <div class="row">
+      <div class="col text-center">
+        <h1>About Our Website</h1>
+        <p class="mt-4">Welcome to our website! We are dedicated to providing the best service and information to our users. Our team works hard to ensure you have a great experience. Thank you for visiting us and we hope you find what you're looking for.</p>
+      </div>
     </div>
+  </section>
+
+  <!-- Team Members Section -->
+  <section class="container mt-5">
+    <div class="row">
+      <div class="col text-center">
+        <h2>Meet Our Team</h2>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-4 team-member text-center">
+        <img src="https://images.bild.de/61d439f18f8b361a16c75a04/9043275e68d68954947de159d6a27eac,c6190a32?w=992" alt="Team Member 1">
+        <h4>Artur</h4>
+        <p>Position in project</p>
+        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+      </div>
+      <div class="col-md-4 team-member text-center">
+        <img src="https://media.licdn.com/dms/image/D4E35AQHAyBiqt_yJ-Q/profile-framedphoto-shrink_200_200/0/1690125127361?e=1720375200&v=beta&t=AzUH6LVcmTy7ROSHwOQnE4TexZcWHy4b03ojsO1iGZM" alt="Team Member 2">
+        <h4>Serhii Shymko</h4>
+        <p>Position in project</p>
+        <p>Email: <a href="mailto:serhii.shymko@ue-germany.com">serhii.shymko@ue-germany.com</a></p>
+      </div>
+      <div class="col-md-4 team-member text-center">
+        <img src="https://www.tagesspiegel.de/images/adolf-hitler2/alternates/BASE_16_9_W1400/adolf-hitler" alt="Team Member 3">
+        <h4>Andrii Prykhodko</h4>
+        <p>Position in project</p>
+        <p>Email: <a href="mailto:jim.brown@example.com">jim.brown@example.com</a></p>
+      </div>
+      <div class="col-md-4 team-member text-center">
+        <img src="https://us-tuna-sounds-images.voicemod.net/cc14ddcb-b5fb-48d3-b3e9-8de648a761b1-1683838484702.jpg" alt="Team Member 4">
+        <h4>Sagdii Rahimov</h4>
+        <p>Position in project</p>
+        <p>Email: <a href="mailto:alice.johnson@example.com">alice.johnson@example.com</a></p>
+      </div>
+      <div class="col-md-4 team-member text-center">
+        <img src="https://cfcdn.aerzteblatt.de/bilder/100003-800-0" alt="Team Member 5">
+        <h4>Mark Shafarenko</h4>
+        <p>Position in project</p>
+        <p>Email: <a href="mailto:michael.lee@example.com">michael.lee@example.com</a></p>
+      </div>
+      <div class="col-md-4 team-member text-center">
+        <img src="https://i.redd.it/z2kbbag00i061.jpg" alt="Team Member 6">
+        <h4>Maksym Kashevarov</h4>
+        <p>Position in project</p>
+        <p>Email: <a href="mailto:emily.davis@example.com">emily.davis@example.com</a></p>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
