Change about-us.html, add photos

--- a/about-us.html
+++ b/about-us.html
@@ -30,40 +30,34 @@
     </div>
     <div class="row mt-4">
       <div class="col-md-4 team-member text-center">
-        <img src="https://images.bild.de/61d439f18f8b361a16c75a04/9043275e68d68954947de159d6a27eac,c6190a32?w=992" alt="Team Member 1">
-        <h4>Artur</h4>
-        <p>Position in project</p>
-        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+        <img src="images/team/Artur.jpg" alt="Team Member 1">
+        <h4>Artur Okseniuk</h4>
+        <p>Email: <a href="mailto:arthur.okseniuk@gmail.com">arthur.okseniuk@gmail.com</a></p>
       </div>
       <div class="col-md-4 team-member text-center">
-        <img src="https://media.licdn.com/dms/image/D4E35AQHAyBiqt_yJ-Q/profile-framedphoto-shrink_200_200/0/1690125127361?e=1720375200&v=beta&t=AzUH6LVcmTy7ROSHwOQnE4TexZcWHy4b03ojsO1iGZM" alt="Team Member 2">
+        <img src="images/team/Serhii.jpg" alt="Team Member 2">
         <h4>Serhii Shymko</h4>
-        <p>Position in project</p>
         <p>Email: <a href="mailto:serhii.shymko@ue-germany.com">serhii.shymko@ue-germany.com</a></p>
       </div>
       <div class="col-md-4 team-member text-center">
-        <img src="https://www.tagesspiegel.de/images/adolf-hitler2/alternates/BASE_16_9_W1400/adolf-hitler" alt="Team Member 3">
+        <img src="images/team/Andrii.jpg" alt="Team Member 3">
         <h4>Andrii Prykhodko</h4>
-        <p>Position in project</p>
-        <p>Email: <a href="mailto:jim.brown@example.com">jim.brown@example.com</a></p>
+        <p>Email: <a href="mailto:andrii.prykhodko@ue-germany.de">andrii.prykhodko@ue-germany.de</a></p>
       </div>
       <div class="col-md-4 team-member text-center">
-        <img src="https://us-tuna-sounds-images.voicemod.net/cc14ddcb-b5fb-48d3-b3e9-8de648a761b1-1683838484702.jpg" alt="Team Member 4">
+        <img src="images/team/Sagdii.jpg" alt="Team Member 4">
         <h4>Sagdii Rahimov</h4>
-        <p>Position in project</p>
-        <p>Email: <a href="mailto:alice.johnson@example.com">alice.johnson@example.com</a></p>
+        <p>Email: <a href="mailto:Rahimovsaga@gmail.com">Rahimovsaga@gmail.com</a></p>
       </div>
       <div class="col-md-4 team-member text-center">
-        <img src="https://cfcdn.aerzteblatt.de/bilder/100003-800-0" alt="Team Member 5">
+        <img src="images/team/Mark.jpg" alt="Team Member 5">
         <h4>Mark Shafarenko</h4>
-        <p>Position in project</p>
-        <p>Email: <a href="mailto:michael.lee@example.com">michael.lee@example.com</a></p>
+        <p>Email: <a href="mailto:mark.shafarenko@ue-germany.de">mark.shafarenko@ue-germany.de</a></p>
       </div>
       <div class="col-md-4 team-member text-center">
-        <img src="https://i.redd.it/z2kbbag00i061.jpg" alt="Team Member 6">
+        <img src="images/team/Maksym.jpg" alt="Team Member 6">
         <h4>Maksym Kashevarov</h4>
-        <p>Position in project</p>
-        <p>Email: <a href="mailto:emily.davis@example.com">emily.davis@example.com</a></p>
+        <p>Email: <a href="mailto:Kmaximlk04@outlook.com">Kmaximlk04@outlook.com</a></p>
       </div>
     </div>
   </section>
