--- a/about-us.html
+++ b/about-us.html
@@ -7,14 +7,15 @@
   <title>About Us</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style/about-us-page/style-main.css">
+  <script src="scripts/navbar.js" defer></script>
 </head>
 
 <body>
 
   <!-- Website Description Section -->
-  <section class="container mt-5">
+  <section class="container mt-5 margin-top1">
     <div class="row">
-      <div class="col text-center">
+      <div class="col text-center margin-top1">
         <h1>About Our Website</h1>
         <p class="mt-4">Welcome to our website! We are dedicated to providing the best service and information to our users. Our team works hard to ensure you have a great experience. Thank you for visiting us and we hope you find what you're looking for.</p>
       </div>
